added required on input type for email

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <div>
       <form action="#" name="form" onsubmit="ValidateEmail(form.email)">
-        <input type="text" name="email" id="email" placeholder="Email Address" >
+        <input type="text" name="email" id="email" placeholder="Email Address" required>
         <i id="form-control-icon"><img src="/assets/images/icon-error.svg" alt=""></i>
         <button type="submit">
             <img id="submit-arrow" src="/assets/images/icon-arrow.svg" alt="submit-arrow">
